# mcp-umphreys

./: .dockerignore  .env.example  .gitignore  Dockerfile  README.md  docker-compose.yml  pyproject.toml  requirements-dev.in  requirements.in
.github/: dependabot.yml
.github/workflows/: ci.yml
src/mcp_umphreys/: __init__.py  cache.py  config.py  healthcheck.py  logging_setup.py  models.py  server.py  throttle.py  vault.py
src/mcp_umphreys/clients/: __init__.py  atu.py  stubs.py
tests/: conftest.py  test_cache.py  test_config.py  test_healthcheck.py  test_logging.py  test_models.py  test_stubs.py  test_throttle.py  test_tools.py  test_x_merge.py
tests/fixtures/: README.md
