[build-system]
requires = ["setuptools>=68", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "mcp-umphreys"
version = "0.1.0"
description = "MCP server for Umphrey's McGee setlist data (umphreys-vault Postgres + live ATU fallthrough)."
readme = "README.md"
license = { file = "LICENSE" }
requires-python = ">=3.13"
authors = [{ name = "Pete Stergion" }]
keywords = ["mcp", "umphreys", "umphreys-mcgee", "atu", "fastmcp", "homelab"]
classifiers = [
    "Development Status :: 3 - Alpha",
    "Intended Audience :: Developers",
    "License :: OSI Approved :: MIT License",
    "Operating System :: OS Independent",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.13",
    "Topic :: Multimedia :: Sound/Audio",
]
dependencies = [
    "fastmcp==3.4.2",
    "httpx==0.28.1",
    "uvicorn==0.49.0",
    "python-dotenv==1.2.2",
    "pydantic==2.13.4",
    "pydantic-settings==2.14.1",
    "aiosqlite==0.22.1",
    "asyncpg>=0.29",
]

[project.optional-dependencies]
dev = [
    "pytest==9.1.0",
    "pytest-asyncio==1.4.0",
    "pytest-cov==7.1.0",
    "ruff==0.15.18",
    "mypy==2.1.0",
]

[project.scripts]
mcp-umphreys = "mcp_umphreys.server:main"
mcp-umphreys-healthcheck = "mcp_umphreys.healthcheck:main"

[project.urls]
Homepage = "https://github.com/pete-builds/mcp-umphreys"
Repository = "https://github.com/pete-builds/mcp-umphreys"
Issues = "https://github.com/pete-builds/mcp-umphreys/issues"
Changelog = "https://github.com/pete-builds/mcp-umphreys/blob/main/CHANGELOG.md"

[tool.setuptools.packages.find]
where = ["src"]

[tool.setuptools.package-data]
mcp_umphreys = ["py.typed"]

# ---------------------------------------------------------------------------
# Tooling
# ---------------------------------------------------------------------------

[tool.pytest.ini_options]
minversion = "8.0"
addopts = [
    "-ra",
    "--strict-markers",
    "--strict-config",
    "--cov=mcp_umphreys",
    "--cov-report=term-missing",
    "--cov-report=xml",
]
testpaths = ["tests"]
asyncio_mode = "auto"
asyncio_default_fixture_loop_scope = "function"

[tool.coverage.run]
branch = true
source = ["mcp_umphreys"]

[tool.coverage.report]
show_missing = true
skip_covered = false
exclude_lines = [
    "pragma: no cover",
    "raise NotImplementedError",
    "if __name__ == .__main__.:",
    "if TYPE_CHECKING:",
]

[tool.ruff]
line-length = 100
target-version = "py313"
src = ["src", "tests"]

[tool.ruff.lint]
select = [
    "E",   # pycodestyle errors
    "W",   # pycodestyle warnings
    "F",   # pyflakes
    "I",   # isort
    "B",   # flake8-bugbear
    "UP",  # pyupgrade
    "SIM", # flake8-simplify
    "C4",  # flake8-comprehensions
    "S",   # flake8-bandit (security)
    "RUF", # ruff-specific
]
ignore = [
    "S101", # asserts are fine in this codebase (used as type narrowers)
    "S104", # binding 0.0.0.0 is intentional for the container
]

[tool.ruff.lint.per-file-ignores]
"tests/**/*.py" = ["S105", "S106"]  # hardcoded test passphrases are fine

[tool.ruff.format]
quote-style = "double"
indent-style = "space"

[tool.mypy]
python_version = "3.13"
strict = true
warn_unreachable = true
warn_redundant_casts = true
warn_unused_ignores = true
disallow_any_generics = true
mypy_path = ["src"]
files = ["src/mcp_umphreys"]
explicit_package_bases = true

[[tool.mypy.overrides]]
module = ["fastmcp", "fastmcp.*", "aiosqlite", "aiosqlite.*", "asyncpg", "asyncpg.*"]
ignore_missing_imports = true
